# netboot.xyz-custom

./: .dockerignore  .editorconfig  .envrc  .gitignore  Dockerfile  LICENSE  README.md  devenv.nix  pyproject.toml  pyrightconfig.json  rsync-exclude.txt  sync_and_build.py
_meta/config/: .golangci.yml  biome.jsonc  html_tidy.txt  ruff.toml
_meta/nix/: devcontainer.nix  git-hooks.nix  scripts.nix  treefmt.nix
_meta/scripts/: addpoly.sh  lib.sh
_meta/templates/: polylith.pyproject.template.toml  pyproject.template.toml
scripts/: build_iso.sh
src/netboot_builder/: __init__.py  __main__.py  config.py  sync_and_build.py
